hardware_imp/vitis_hls/lane_seg_hls/lane_seg/csim/report/lane_seg_top_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../lane_seg_tb.cpp in debug mode
csim.mk:78: recipe for target 'obj/lane_seg_tb.o' failed
In file included from Z:/Xilinx/Vitis_HLS/2023.1/include/floating_point_v7_1_bitacc_cmodel.h:149:0,
                 from Z:/Xilinx/Vitis_HLS/2023.1/include/hls_fpo.h:143,
                 from Z:/Xilinx/Vitis_HLS/2023.1/include/etc/hls_half_fpo.h:18,
                 from Z:/Xilinx/Vitis_HLS/2023.1/include/hls_half.h:25,
                 from Z:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_private.h:52,
                 from Z:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_common.h:666,
                 from Z:/Xilinx/Vitis_HLS/2023.1/include/ap_fixed.h:9,
                 from ../../../lane_seg_tb.cpp:1:
Z:/Xilinx/Vitis_HLS/2023.1/include/gmp.h:58:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from Z:/Xilinx/Vitis_HLS/2023.1/include/hls_fpo.h:143:0,
                 from Z:/Xilinx/Vitis_HLS/2023.1/include/etc/hls_half_fpo.h:18,
                 from Z:/Xilinx/Vitis_HLS/2023.1/include/hls_half.h:25,
                 from Z:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_private.h:52,
                 from Z:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_common.h:666,
                 from Z:/Xilinx/Vitis_HLS/2023.1/include/ap_fixed.h:9,
                 from ../../../lane_seg_tb.cpp:1:
Z:/Xilinx/Vitis_HLS/2023.1/include/floating_point_v7_1_bitacc_cmodel.h:141:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
../../../lane_seg_tb.cpp:7:0: warning: "IMG_HEIGHT" redefined
 #define IMG_HEIGHT     224
 
In file included from ../../../lane_seg_tb.cpp:2:0:
../../../lane_seg_top.h:28:0: note: this is the location of the previous definition
 #define IMG_HEIGHT  IN_H
 
../../../lane_seg_tb.cpp:8:0: warning: "IMG_WIDTH" redefined
 #define IMG_WIDTH      224
 
In file included from ../../../lane_seg_tb.cpp:2:0:
../../../lane_seg_top.h:29:0: note: this is the location of the previous definition
 #define IMG_WIDTH   IN_W
 
../../../lane_seg_tb.cpp: In function 'int main()':
../../../lane_seg_tb.cpp:70:50: error: cannot convert 'float (*)[224][3]' to 'data_t (*)[224][3] {aka ap_fixed<16, 4> (*)[224][3]}' for argument '1' to 'void lane_seg_top(data_t (*)[224][3], data_t (*)[112][32], unsigned int, unsigned int&, unsigned int&)'
     lane_seg_top(image, out0, ctrl, status, magic);
                                                  ^
make: *** [obj/lane_seg_tb.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
